# learn_django

./: pyproject.toml
amazing_hunting/: settings.py  urls.py
companies/: models.py  urls.py  views.py
vacancies/: models.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py
